Criei o responsive mobile, e adicionei um menu hamburguer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
             <div class="division-container-header"></div>
             <div>
-                <span id="menu-hamburguer">&#9776;</span>
+                <a href="menu.html" class="link-menu"><span id="menu-hamburguer">&#9776;</span></a>
             </div>
             <nav class="container-menu">
                 <ul class="list-menu">
