Criando media para a tela 1024

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE  html>
 <html lang="pt-br">
     <head>
-        <title>Oi</title>
+        <title>Dali Cakes</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,10 +50,11 @@
         </nav>
         </header>
         <main>
+                <figure>
+                    <img src="assets/Rectangle 2.png" class="img-container-description">
+                </figure>
             <section class="container-description-init">
-                    <figure>
-                        <img src="assets/Rectangle 2.png" class="img-container-description">
-                    </figure>
+                    
                     <p class="title-main">
                         Delicious
                     </p>
