--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE  html>
 <html lang="pt-br">
     <head>
-        <title>Oi</title>
+        <title>Dali Cakes</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style-menu.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
         <main>
             <header>
                 <ul class="list-menu">
-                    <a href="index.html" target="_blanck" class="link-item-list"><li class="item-list">HOME</li></a>
+                    <a href="index.html" class="link-item-list"><li class="item-list">HOME</li></a>
                     <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">GALLERY</li></a>
                     <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">SHOP</li></a>
                     <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">BLOG</li></a>
