removi os links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
                     <figure>
                         <img src="assets/localizacao 1.jpg" class="img-location">
                     </figure>
-                    <p class="location">Santa Teresa</p>
-                </div>
+                    <p class="location">Santa Teresa</p> </div>
                 <div class="container-title">
                     <p class="first-title">Dali</p>
                         <figure>
@@ -31,13 +30,13 @@
             </div>
             <nav class="container-menu">
                 <ul class="list-menu">
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">HOME</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">GALLERY</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">SHOP</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">BLOG</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">PAGES</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">ELEMENTS</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">CONTACT US</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">HOME</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">GALLERY</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">SHOP</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">BLOG</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">PAGES</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">ELEMENTS</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">CONTACT US</li></a>
                 </ul>
             <div class="container-search">    
                 <figure>
