--- a/menu.html
+++ b/menu.html
@@ -12,12 +12,12 @@
             <header>
                 <ul class="list-menu">
                     <a href="index.html" class="link-item-list"><li class="item-list">HOME</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">GALLERY</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">SHOP</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">BLOG</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">PAGES</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">ELEMENTS</li></a>
-                    <a href="www.com.br" target="_blanck" class="link-item-list"><li class="item-list">CONTACT US</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">SHOP</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">GALLERY</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">BLOG</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">PAGES</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">ELEMENTS</li></a>
+                    <a href="#" class="link-item-list"><li class="item-list">CONTACT US</li></a>
                 </ul>
             </nav>
         </header>
