--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="description">cake to eat with coffee, Jujube, bananada, popcorn, Cocada, queijadinha, ice
                     cream, Gum, chocolate
                     sundae.</p>
-                <a href="www.com.br" target="_blanck"><button class="button-description">shop now</button></a>
+                <a href="#" target="_blanck"><button class="button-description">shop now</button></a>
             </div>
             <figure>
                 <img src="assets/cakes 1.png" class="cakes-description-container-init">
